--- a/deploy/metrics-demo/podinfo-dep.yaml
+++ b/deploy/metrics-demo/podinfo-dep.yaml
@@ -2,27 +2,27 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: podinfo
+  name: metrics-demo
   namespace: dev
   annotations:
-    flux.weave.works/tag.podinfod: glob:*
+    flux.weave.works/tag.metrics-demod: glob:*
 spec:
   replicas: 6
   selector:
     matchLabels:
-      app: podinfo
+      app: metrics-demo
   template:
     metadata:
       labels:
-        app: podinfo
+        app: metrics-demo
       annotations:
         prometheus.io/scrape: 'true'
     spec:
       containers:
-      - name: podinfod
+      - name: metrics-demod
         image: quay.io/brice/metrics-demo:v4-subscription-service
         command:
-        - ./podinfo
+        - ./metrics-demo
         - --port=3000
         ports:
         - containerPort: 3000
